# Iglobals-CAuth

./: CLIENT_REGISTRATION_GUIDE.md  DEPLOYMENT_CHECKLIST.md  FOLDER_STRUCTURE.md  INTEGRATION_GUIDE.md  MIGRATION_SUMMARY.md  OAUTH_AUTH_FIXES.md  OAUTH_FLOW_EXPLAINED.md  QUICK_FIX_GUIDE.md  QUICK_FIX_SUMMARY.md  QUICK_START.md  README.md  REMAINING_WORK.md  SYSTEM_STATUS.md  UI_FIXES.md  VERCEL_DEPLOYMENT_FIX.md  docker-compose.yml  full-system-design.md  google_chrome_auth (1).html  package-lock.json  package.json
.github/workflows/: publish-js-sdk.yml  publish-python-sdk.yml  publish-sdks.yml
api/: package.json
api/src/: app.js  index.js
api/src/config/: index.js
api/src/db/: pool.js
migrations/: 002_schema.sql  003_users.sql  004_oauth_clients.sql  005_authorization_codes.sql  006_refresh_tokens.sql  007_user_consents.sql  008_ica_sessions.sql  009_email_verifications.sql  010_phone_verifications.sql  011_password_reset_requests.sql  012_audit_log.sql  013_seed_admin_client.sql  014_add_google_auth.sql
scripts/: generate-keys.js  generate-migrations.js  migrate.js  reset-client-secret.js  test-client-api.js  test-client-fetch.js  verify-deployment.js
sdk-js/: README.md  package.json
sdk-js/src/: client.ts  errors.ts  index.ts  jwks.ts  middleware.ts  pkce.ts  types.ts
sdk-py/: README.md  pyproject.toml  test.py
sdk-py/iglobals_auth/: __init__.py  client.py  errors.py  fastapi.py  flask.py  jwks.py  pkce.py  types.py
sdk-py/iglobals_auth.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
web/: next.config.ts  package.json
(+117 files in other folders)
