[project]
name = "iglobals-auth"
version = "1.0.0"
description = "iGlobals Central Auth SDK for Python"
authors = [
    {name = "iGlobals", email = "engineering@iglobals.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "PyJWT[crypto]>=2.8.0",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.100.0"]
flask = ["Flask>=2.0.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["iglobals_auth"]
